# xaku

./: Cargo.toml
.github/workflows/: release.yml
docs/: INDEX.md
docs/dev/: architecture.md  contributing.md  protocol.md
docs/user/: commands.md  getting-started.md
src/: daemon.rs  main.rs  protocol.rs  session.rs
