[package]
name = "xaku"
version = "0.1.0"
edition = "2024"
description = "Headless terminal multiplexer for agent automation"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.29", features = ["term", "signal"] }
vt100 = "0.15"
anyhow = "1"
libc = "0.2"
